--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="data-address" content="55 W SIERRA MADRE BLVD 202,
 SIERRA MADRE, CA 91024"><meta name="data-map" content="55+W+SIERRA+MADRE+BLVD+202,+SIERRA+MADRE,+CA+91024">
   <meta name="description" content="Our nonprofit strengthens the community with programs focused on community services, education, and direct relief.">
+<meta name="facebook-domain-verification" content="6ek1mru47wnhlo4e0zslibimjz84lc" />
 </head>
 <body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
